--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -8,7 +7,7 @@
   </parent>
   <groupId>org.kuali.maven.wagons</groupId>
   <artifactId>maven-s3-wagon</artifactId>
-  <version>1.0.28-SNAPSHOT</version>
+  <version>1.0.28</version>
   <name>AWS S3 Wagon</name>
   <description>
     This project is an implementation of Wagon provider for accessing Amazon's Simple Storage Service (S3).
@@ -102,8 +101,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/trunk/maven-s3-wagon</connection>
-    <developerConnection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/trunk/maven-s3-wagon</developerConnection>
-    <url>https://test.kuali.org/svn/student/deploymentlab/trunk/maven-s3-wagon</url>
+    <connection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/tags/maven-s3-wagon-1.0.28</connection>
+    <developerConnection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/tags/maven-s3-wagon-1.0.28</developerConnection>
+    <url>https://test.kuali.org/svn/student/deploymentlab/tags/maven-s3-wagon-1.0.28</url>
   </scm>
 </project>
