--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>9</version>
+    <version>22</version>
   </parent>
   <groupId>org.kuali.maven.wagons</groupId>
   <artifactId>maven-s3-wagon</artifactId>
@@ -12,8 +12,7 @@
   <description>
     This project is an implementation of Wagon provider for accessing Amazon's Simple Storage Service (S3).
     It enables Maven to download files from and deploy files to S3. It draws heavily from code
-    developed by Ben Hale at
-    SpringSource
+    developed by Ben Hale at SpringSource
   </description>
   <url>http://${kuali.site.hostname}/maven/wagons/${project.artifactId}/${project.version}/</url>
   <properties>
@@ -46,9 +45,9 @@
       <version>1.3</version>
     </dependency>
     <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.0.1</version>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.1.2</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -61,6 +60,10 @@
       <artifactId>aws-java-sdk</artifactId>
       <version>1.2.11</version>
       <exclusions>
+        <exclusion>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+        </exclusion>
         <exclusion>
           <groupId>commons-logging</groupId>
           <artifactId>commons-logging</artifactId>
@@ -83,7 +86,7 @@
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-provider-api</artifactId>
-      <version>1.0-beta-6</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -113,8 +116,7 @@
   </dependencies>
   <scm>
     <connection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/trunk/maven-s3-wagon</connection>
-    <developerConnection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/trunk/maven-s3-wagon
-    </developerConnection>
+    <developerConnection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/trunk/maven-s3-wagon</developerConnection>
     <url>https://test.kuali.org/svn/student/deploymentlab/trunk/maven-s3-wagon</url>
   </scm>
 </project>
