--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
   </parent>
   <groupId>org.kuali.maven.wagons</groupId>
   <artifactId>maven-s3-wagon</artifactId>
-  <version>1.0.34-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
   <name>AWS S3 Wagon</name>
   <description>
-    This project is an implementation of Wagon provider for accessing Amazon's Simple Storage Service (S3).
+    This project is an implementation of a multi-threaded Wagon provider for accessing Amazon's Simple Storage Service (S3).
     It enables Maven to download files from and deploy files to S3. It draws heavily from code
     developed by Ben Hale at SpringSource
   </description>
