correct public url

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,6 @@
   <scm>
     <connection>scm:git:git@github.com:jcaddel/maven-s3-wagon.git</connection>
     <developerConnection>scm:git:git@github.com:jcaddel/maven-s3-wagon.git</developerConnection>
-    <url>https://jcaddel@github.com/jcaddel/maven-s3-wagon.git</url>
+    <url>https://github.com/jcaddel/maven-s3-wagon</url>
   </scm>
 </project>
