--- a/.project
+++ b/.project
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
   <name>maven-s3-wagon</name>
-  <comment>
-    This project is an implementation of Wagon provider for accessing Amazon's Simple Storage Service (S3).
-    It enables Maven to download files from and deploy files to S3. It draws heavily from code
-    developed by Ben Hale at SpringSource  
+  <comment> This project is an implementation of Wagon provider for accessing Amazon&apos;s Simple Storage Service (S3). It enables Maven to download files
+    from and deploy files to S3. It draws heavily from code developed by Ben Hale at SpringSource
   </comment>
   <projects>
   </projects>
@@ -15,13 +13,13 @@
       </arguments>
     </buildCommand>
     <buildCommand>
-      <name>org.maven.ide.eclipse.maven2Builder</name>
+      <name>org.eclipse.m2e.core.maven2Builder</name>
       <arguments>
       </arguments>
     </buildCommand>
   </buildSpec>
   <natures>
     <nature>org.eclipse.jdt.core.javanature</nature>
-    <nature>org.maven.ide.eclipse.maven2Nature</nature>
+    <nature>org.eclipse.m2e.core.maven2Nature</nature>
   </natures>
 </projectDescription>
