--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         </exclusion>
         <exclusion>
           <groupId>commons-codec</groupId>
-          <artifactId>jackson-core-asl</artifactId>
+          <artifactId>commons-codec</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
