--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
   <artifactId>maven-s3-wagon</artifactId>
   <version>1.1.9-SNAPSHOT</version>
   <name>AWS S3 Wagon</name>
+  <inceptionYear>2010</inceptionYear>
   <description>
     This project is an implementation of a multi-threaded Wagon provider for accessing Amazon's Simple Storage Service (S3).
     It enables Maven to download files from and deploy files to S3. 
