--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>1.1.7</version>
+    <version>1.2.3</version>
   </parent>
   <groupId>org.kuali.maven.wagons</groupId>
   <artifactId>maven-s3-wagon</artifactId>
@@ -37,7 +37,7 @@
     <kuali.compile.source>1.5</kuali.compile.source>
     <kuali.compile.target>1.5</kuali.compile.target>
     <slf4j.version>1.6.4</slf4j.version>
-    <aws.version>1.3.6</aws.version>
+    <aws.version>1.3.8</aws.version>
   </properties>
   <dependencies>
     <dependency>
@@ -95,9 +95,9 @@
       <version>2.2</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>2.3</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -105,9 +105,9 @@
       <version>2.6</version>
     </dependency>
     <dependency>
-      <groupId>org.kuali.common.threads</groupId>
+      <groupId>org.kuali.common</groupId>
       <artifactId>kuali-threads</artifactId>
-      <version>1.0.8</version>
+      <version>1.0.9</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
