--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   </parent>
   <groupId>org.kuali.maven.wagons</groupId>
   <artifactId>maven-s3-wagon</artifactId>
-  <version>1.1.17-SNAPSHOT</version>
+  <version>1.1.17</version>
   <name>Maven S3 Wagon</name>
   <inceptionYear>2010</inceptionYear>
   <description>
