--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   </parent>
   <groupId>org.kuali.maven.wagons</groupId>
   <artifactId>maven-s3-wagon</artifactId>
-  <version>1.1.20</version>
+  <version>1.1.21-SNAPSHOT</version>
   <name>Maven S3 Wagon</name>
   <inceptionYear>2010</inceptionYear>
   <description>
@@ -149,6 +149,6 @@
     <connection>scm:git:git@github.com:jcaddel/maven-s3-wagon.git</connection>
     <developerConnection>scm:git:git@github.com:jcaddel/maven-s3-wagon.git</developerConnection>
     <url>https://github.com/jcaddel/maven-s3-wagon</url>
-    <tag>maven-s3-wagon-1.1.20</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
