--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>3.3.17</version>
+    <version>3.3.33</version>
   </parent>
   <groupId>org.kuali.maven.wagons</groupId>
   <artifactId>maven-s3-wagon</artifactId>
@@ -37,9 +37,10 @@
     <project.scm.vendor>git</project.scm.vendor>
     <project.java.version>1.5</project.java.version>
     <slf4j.version>1.7.5</slf4j.version>
-    <aws.version>1.5.7</aws.version>
-    <spring.version>3.2.4.RELEASE</spring.version>
+    <aws.version>1.6.4</aws.version>
+    <spring.version>3.2.5.RELEASE</spring.version>
     <kuali-s3.version>1.0.1</kuali-s3.version>
+    <junit.version>4.11</junit.version>
   </properties>
   <profiles>
     <profile>
@@ -89,7 +90,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
-      <version>4.10</version>
+      <version>${junit.version}</version>
     </dependency>
     <dependency>
       <groupId>org.kuali.common</groupId>
@@ -140,7 +141,7 @@
     <dependency>
       <groupId>org.kuali.common</groupId>
       <artifactId>kuali-threads</artifactId>
-      <version>1.0.9</version>
+      <version>1.0.10</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
